# single-header-starter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-test.yml  verify.yml
ci/: format-all.sh  install-catch2.sh  verify.sh
include/mylib/: bar.hpp  foo.hpp  mylib.hpp
script/: build.sh  generate-header.sh  hook.sh
single_include/mylib/: mylib.hpp
test/: CMakeLists.txt  test_bar.cpp  test_foo.cpp
